--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
     "turbo": "^2.5.5",
     "typescript": "5.7.3"
   },
