--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,12 +12,23 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/trpc": "workspace:*",
+    "@tanstack/react-query": "^5.90.9",
+    "@trpc/client": "^11.7.1",
+    "@trpc/react-query": "^11.7.1",
+    "@trpc/server": "^11.7.1",
+    "@trpc/tanstack-react-query": "^11.7.1",
     "@workspace/ui": "workspace:*",
+    "client-only": "^0.0.1",
+    "fetch": "link:@trpc/server/adapters/fetch",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "server-only": "^0.0.1",
+    "trpc": "^0.11.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
