--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b",
+    "build": "prisma generate && tsc -b && cp src/generated/*.node dist/generated/ && cp -r src/generated/runtime dist/generated/",
     "dev": "node dist/index.js",
     "run": "npm run build && npm run dev"
   },
