--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "prisma generate && tsc -b && cp src/generated/*.node dist/generated/ && cp -r src/generated/runtime dist/generated/",
-    "dev": "node dist/index.js",
+    "dev": "npm run build && node dist/index.js",
     "run": "npm run build && npm run dev"
   },
   "exports": {
