--- a/.github/workflows/auto-approve-after-coderabbit.yml
+++ b/.github/workflows/auto-approve-after-coderabbit.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
-    if: github.event.review.user.login == 'coderabbitai[bot]' && github.event.review.state == 'approved'
     permissions:
       pull-requests: write
 
@@ -20,9 +19,12 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Approve PR
-        run: gh pr review ${{ github.event.pull_request.number }} --approve
+      - name: Auto approve PR if CodeRabbit approved
+        if: |
+          github.event.review.user.login == 'coderabbitai[bot]' &&
+          github.event.review.state == 'approved'
+        run: |
+          gh pr review "$PR_URL" --approve
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: ${{ github.repository }}
-# After this change, you just need to push a commit (it can be an empty commit or a small change) to your branch, or update the PR, so the workflow triggers on the next CodeRabbit review event. No other steps are required. Just test the workflow by getting a new CodeRabbit review on your PR.
+          PR_URL: ${{ github.event.pull_request.html_url }}
