--- a/packages/nodes/package.json
+++ b/packages/nodes/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "nodes",
+  "name": "@repo/nodes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b",
+    "dev": "tsc -b --watch",
+    "clean": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "@repo/db": "workspace:*",
     "dotenv": "^17.2.3",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.9"
+    "@types/node": "^20.19.9",
+    "@repo/db": "workspace:*",
+    "@workspace/typescript-config": "workspace:*"
   }
 }
