--- a/packages/nodes/package.json
+++ b/packages/nodes/package.json
@@ -7,7 +7,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc -b",
-    "dev": "tsc -b --watch",
+    "dev": "npm run build && node dist/index.js",
+
     "clean": "rm -rf dist"
   },
   "keywords": [],
@@ -15,7 +16,6 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "@repo/db": "workspace:*",
     "dotenv": "^17.2.3",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0"
