Update .gitignore, modify package.json to set module type, and enhance hooks and backend routes with improved error handling and data processing

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ packages/db/prisma/migrations/
 packages/nodes/client_google.json
 packages/db/tsconfig.tsbuildinfo
 packages/db/prisma/migrations/migration_lock.toml
+ apps/http-backend/tsbuildinfo
