--- a/apps/hooks/package.json
+++ b/apps/hooks/package.json
@@ -8,7 +8,7 @@
     "build" : "tsc -v",
     "dev" : "tsc -b && node dist/index.js"
   },
-
+"type" : "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
