--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,17 +12,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/trpc": "workspace:*",
-    "@tanstack/react-query": "^5.90.9",
-    "@trpc/client": "^11.7.1",
-    "@trpc/react-query": "^11.7.1",
-    "@trpc/server": "^11.7.1",
-    "@trpc/tanstack-react-query": "^11.7.1",
+    "@repo/db": "workspace:*",
+
+    "@types/bcryptjs": "^3.0.0",
     "@workspace/ui": "workspace:*",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "client-only": "^0.0.1",
     "fetch": "link:@trpc/server/adapters/fetch",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
