--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ packages/db/prisma/migrations/migration_lock.toml
 
  workder/node_modules
  workder/dist
+apps/http-backend/tsconfig.tsbuildinfo
+packages/common/tsconfig.tsbuildinfo
+packages/db/tsconfig.tsbuildinfo
