--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,10 +12,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "@repo/db": "workspace:*",
-
     "@types/bcryptjs": "^3.0.0",
     "@workspace/ui": "workspace:*",
+    "@xyflow/react": "^12.9.3",
+    "add": "^2.0.6",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "client-only": "^0.0.1",
@@ -24,6 +26,7 @@
     "next": "^15.4.5",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "pnpm": "^10.24.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "server-only": "^0.0.1",
