--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "@repo/db": "workspace:*",
+    "@repo/common" : "workspace:*",
     "@types/bcryptjs": "^3.0.0",
     "@workspace/ui": "workspace:*",
     "@xyflow/react": "^12.9.3",
