--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
-    "@repo/common" : "workspace:*",
     "@types/bcryptjs": "^3.0.0",
     "@workspace/ui": "workspace:*",
     "@xyflow/react": "^12.9.3",
@@ -28,6 +29,7 @@
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-dialog": "link:@types/@radix-ui/react-dialog",
     "react-dom": "^19.1.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
