--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -23,10 +23,12 @@
     "@repo/nodes": "workspace:*",
     "@types/axios": "^0.14.4",
     "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
