--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,10 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
+    "@repo/nodes": "workspace:*",
     "@types/bcryptjs": "^3.0.0",
     "@workspace/ui": "workspace:*",
     "@xyflow/react": "^12.9.3",
@@ -24,6 +24,7 @@
     "bcryptjs": "^3.0.3",
     "client-only": "^0.0.1",
     "fetch": "link:@trpc/server/adapters/fetch",
+    "googleapis": "^166.0.0",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-auth": "^4.24.13",
