--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@reduxjs/toolkit": "^2.11.2",
     "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/nodes": "workspace:*",
@@ -28,10 +29,12 @@
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-auth": "^4.24.13",
+    "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dialog": "link:@types/@radix-ui/react-dialog",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "trpc": "^0.11.3",
