chore: update package dependencies and fix schema relations
- Added @prisma/adapter-pg dependency to db package.
- Updated schema.prisma to correct AvailableNode relation and added isEmpty field to Workflow model.
- Adjusted tsconfig build info version.
- Updated pnpm-lock.yaml to reflect new versions for prettier, turbo, and added new dependencies including redux and immer.
- Updated various packages and their versions in pnpm-lock.yaml to ensure compatibility and stability.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "prisma generate && tsc -b ",
-
     "dev": "node dist/index.js",
     "run": "npm run build && npm run dev"
   },
@@ -19,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^6.19.0",
     "@types/dotenv": "^8.2.3",
     "dotenv": "^17.2.3",
