--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "client-only": "^0.0.1",
     "fetch": "link:@trpc/server/adapters/fetch",
     "googleapis": "^166.0.0",
+    "immer": "^11.1.0",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-auth": "^4.24.13",
