--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
     "dev": "tsc -b && node dist/index.js"
   },
   "type": "module",
   "keywords": [],
   "devDependencies": {
     "@repo/db": "workspace:*",
+    "@repo/nodes": "workspace:*",
     "@workspace/typescript-config": "workspace:*"
   },
   "author": "",
