--- a/packages/nodes/package.json
+++ b/packages/nodes/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "build": "tsc -b",
     "dev": "npm run build && node dist/index.js",
-
     "clean": "rm -rf dist"
   },
   "keywords": [],
@@ -20,12 +19,12 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "@types/dotenv": "^8.2.3",
     "dotenv": "^17.2.3",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.9",
     "@repo/db": "workspace:*",
     "@workspace/typescript-config": "workspace:*"
   }
